--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <p><a href="https://drive.google.com/file/d/1m1G3x5T6vRzZYYgpasA8UH6JYWnpe6dW/view?usp=sharing" target = "_blank">4K Video Downloader</a> (safe link to google drive, uploaded by calvin. beware of fake download buttons!)</p>
 
-<p>Safe online video downloader: <a href="https://wave.video/convert/youtube-to-mp4-300/" target = "_blank">wave.video</a>
+<p><a href="https://wave.video/convert/youtube-to-mp4-300/" target = "_blank">wave.video</a> (safe online video downloader)</p>
  
 <!-- <p>The VLC download link and the 4K Video Downloader have both been uploaded to google drive (by calvin) and are linked above. The Davinci Resolve link sends you to <a href="https://www.blackmagicdesign.com/products/davinciresolve/?gclid=CjwKCAjw1t2pBhAFEiwA_-A-NLn0BKMJvkEH_awOn7zpfQp11jnwoGU-pH5DCocYjN-smUHnuBxyLxoCg-EQAvD_BwE" target = "_blank">blackmagicdesign.com</a>.</p> !-->
 
