--- a/groupchat.html
+++ b/groupchat.html
@@ -1,1 +1,37 @@
+<!doctype html>
 
+<html>
+<head>
+<meta charset="utf-8">
+
+<title>TJH Editing Club</title>
+
+ <!-- Load external CSS styles -->
+<link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+
+<a href="https://www.blackmagicdesign.com/products/davinciresolve/?gclid=CjwKCAjw1t2pBhAFEiwA_-A-NLn0BKMJvkEH_awOn7zpfQp11jnwoGU-pH5DCocYjN-smUHnuBxyLxoCg-EQAvD_BwE">Back to homepage</a>
+
+<br>
+<!-- <h3>
+<br>
+Need more help? Message here.
+</h3> !-->
+
+<div style="width: 97%;">
+
+<script async src="https://talk.hyvor.com/embed/embed.js" type="module"></script>
+<hyvor-talk-comments website-id="9872" page-id="" ></hyvor-talk-comments>
+
+</div>
+
+<h5>
+Website hosted by W3Spaces and created by Calvin K. Comment section powered by HYVOR.
+</h5>
+<br>
+</body>
+
+</html>
