--- a/groupchat.html
+++ b/groupchat.html
@@ -7,7 +7,7 @@
 <title>TJH Editing Club</title>
 
  <!-- Load external CSS styles -->
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="gc_styles.css">
 
 </head>
 
