--- a/groupchat.html
+++ b/groupchat.html
@@ -13,6 +13,8 @@
 
 <body>
 
+<div>
+ 
 <a href="https://www.blackmagicdesign.com/products/davinciresolve/?gclid=CjwKCAjw1t2pBhAFEiwA_-A-NLn0BKMJvkEH_awOn7zpfQp11jnwoGU-pH5DCocYjN-smUHnuBxyLxoCg-EQAvD_BwE">Back to homepage</a>
 
 <br>
@@ -31,7 +33,8 @@ Need more help? Message here.
 <h5>
 Website hosted by W3Spaces and created by Calvin K. Comment section powered by HYVOR.
 </h5>
-<br>
+
+</div>
 </body>
 
 </html>
