--- a/groupchat.html
+++ b/groupchat.html
@@ -13,9 +13,9 @@
 
 <body>
 
-<div>
- 
-<a href="https://www.blackmagicdesign.com/products/davinciresolve/?gclid=CjwKCAjw1t2pBhAFEiwA_-A-NLn0BKMJvkEH_awOn7zpfQp11jnwoGU-pH5DCocYjN-smUHnuBxyLxoCg-EQAvD_BwE">Back to homepage</a>
+<div style="width: 97%;">
+
+<p><a href="tjh-editing-club.github.io">Back to homepage</a></p>
 
 <br>
 <!-- <h3>
@@ -23,12 +23,8 @@
 Need more help? Message here.
 </h3> !-->
 
-<div style="width: 97%;">
-
 <script async src="https://talk.hyvor.com/embed/embed.js" type="module"></script>
 <hyvor-talk-comments website-id="9872" page-id="" ></hyvor-talk-comments>
-
-</div>
 
 <h5>
 Website hosted by W3Spaces and created by Calvin K. Comment section powered by HYVOR.
