be17g6q4KgU4.html

--- a/be17g6q4KgU4.html
+++ b/be17g6q4KgU4.html
@@ -17,17 +17,8 @@
 
 <p><a href="tjh-editing-club.github.io">Back to homepage</a></p>
 
-<br>
-<!-- <h3>
-<br>
-Need more help? Message here.
-</h3> !-->
-
-<script async src="https://talk.hyvor.com/embed/embed.js" type="module"></script>
-<hyvor-talk-comments website-id="9872" page-id="" ></hyvor-talk-comments>
-
 <h5>
-Website hosted by W3Spaces and created by Calvin K. Comment section powered by HYVOR.
+Website hosted by Github Pages and created by Calvin K. Comment section powered by HYVOR.
 </h5>
 
 </div>
