--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 
 <html>
 <head>
@@ -27,6 +27,7 @@
 <p><a href="https://drive.google.com/file/d/1m1G3x5T6vRzZYYgpasA8UH6JYWnpe6dW/view?usp=sharing" target = "_blank">4K Video Downloader</a> (safe link to google drive, uploaded by calvin. beware of fake download buttons!)</p>
 
 <p><a href="https://wave.video/convert/youtube-to-mp4-300/" target = "_blank">wave.video</a> (safe online video downloader)</p>
+
  
 <!-- <p>The VLC download link and the 4K Video Downloader have both been uploaded to google drive (by calvin) and are linked above. The Davinci Resolve link sends you to <a href="https://www.blackmagicdesign.com/products/davinciresolve/?gclid=CjwKCAjw1t2pBhAFEiwA_-A-NLn0BKMJvkEH_awOn7zpfQp11jnwoGU-pH5DCocYjN-smUHnuBxyLxoCg-EQAvD_BwE" target = "_blank">blackmagicdesign.com</a>.</p> !-->
 
@@ -59,10 +60,10 @@ Need more help? Message here.
 
 <div style="width: 97%;">
 
-<script async src="https://talk.hyvor.com/embed/embed.js" type="module"></script>
-<hyvor-talk-comments website-id="9872" page-id="" ></hyvor-talk-comments>
-
 </div>
+
+<a href="https://calvincool7623.w3spaces.com/gc_login.html">Login to GroupChat</a>
+
 
 <h5>
 Website hosted by W3Spaces and created by Calvin K. Comment section powered by HYVOR.
